# f2

./: .gitignore  CMakeLists.txt  foxy-linux.cmake  foxy-osx.cmake  foxy-osx.cmake~  foxy-win.cmake
cmake.modules/: ParseAndAddCatchTests.cmake
include/foxy/: .client_session.hpp.swp  client_session.hpp  coroutine.hpp  forward_proxy.hpp  log.hpp  multi_stream.hpp  partition.hpp  remove_header.hpp  server_session.hpp  type_traits.hpp
include/foxy/detail/: get_strand.hpp  session.hpp  session_state.hpp
include/foxy/experimental/core/: flat_stream.hpp
include/foxy/experimental/core/impl/: flat_stream.ipp
include/foxy/impl/: client_session.impl.hpp  session.impl.hpp
src/: client_session.cpp  forward_proxy.cpp  log.cpp  multi_stream.cpp  server_session.cpp  session.cpp  session_state.cpp
test/: client_test.cpp  forward_proxy_test.cpp  is_strand_test.cpp  remove_header_test.cpp
